# hotel-insights-local

./: DEMO.md  README.md  README_DEV.md  RUN.md  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  cli.rs  csv_preview.rs  db.rs  import_bookings.rs  lib.rs  main.rs  queries.rs
src/components/: ImportBookingsCsv.tsx  OverviewDashboard.tsx
src/lib/: api.ts
src/pages/: Bootstrap.tsx  Home.tsx  Login.tsx
